deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus-lab
  template:
    metadata:
      labels:
        app: otus-lab
    spec:
      containers:
      - name: otus-lab
        image: bl00dhound/otus_lab:latest
        ports:
          - name: web
            containerPort: 8000
        livenessProbe:
          httpGet:
            port: 8000
            path: /
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            port: 8000
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 5
