service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-service
spec:
  selector:
    app: otus-lab
  ports:
    - protocol: TCP
      port: 80
      targetPort: web
  type: NodePort
